# 3HSPlug

./: .gitignore  CMakeLists.txt  CMakePresets.json  README_CommandLineArgs.md  s3hs register map.md
assets/: patch_bank.json
assets/patches/: 0.json  1.json  16.json  8.json
src/: CommandLineArgs.cpp  CommandLineArgs.h  DrumKeymapManager.cpp  DrumKeymapManager.h  DrumPcmSampleLoader.cpp  DrumPcmSampleLoader.h  PatchBankData.cpp  PatchBankData.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  VolumeScalingMap.h  config.h.in
src/s3hs_core/: envelove.cpp  ram.cpp  sound.cpp
tools/: README_patch_editor.md  extract_drums.py  fui_spec.txt  patch_editor.py
